# agent-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  otel-collector-config.yaml  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  errors.py  request_id.py  schemas.py
app/api/routes/: runs.py
app/domain/: errors.py  events.py  profiles.py  status.py
app/persistence/: errors.py  ids.py  migrations.py  models.py  repository.py  sqlite_repository.py
app/persistence/migrations/: 001_init.sql  (+1 more)
app/runner/: execute.py  plan.py  pricing.py  rng.py  simulate.py
app/services/: errors.py  event_bus.py  recovery.py  run_service.py
app/telemetry/: ids.py  metrics.py  run_tracer.py  setup.py  spans.py
docs/: defense-questions.md  specs.md  todo.md
docs/images/: README.md
grafana/: dashboard.json
scripts/: demo.py  export_openapi.py
tests/: conftest.py
tests/api/: conftest.py  test_errors.py  test_idempotency.py  test_lifecycle.py  test_list_runs.py  test_recovery.py  test_sse.py
tests/domain/: test_errors.py  test_events.py  test_layering.py  test_profiles.py  test_status.py
tests/persistence/: conftest.py  test_idempotency.py  test_ids.py  test_migrations.py  test_sqlite_repository.py
tests/runner/: test_determinism.py  test_execute.py  test_plan.py  test_pricing.py  test_rng.py  test_simulate.py
tests/services/: test_idempotency.py  test_run_service.py
tests/telemetry/: conftest.py  test_ids.py  test_instrumentation.py  test_metrics.py  test_spans.py
